--- a/demo/demo.Rmd
+++ b/demo/demo.Rmd
@@ -188,6 +188,15 @@ This one uses `\lim` and `\frac`, and other things.
 $$
 e = \lim_{n \to \infty} \left(1 + \frac{1}{n}\right)^n
 $$
+Here, we use `aligned`.
+$$
+\begin{aligned}
+x &= \log\left(\frac{p}{1-p}\right),\\
+e^x &= \frac{p}{1-p},\\
+    &= \frac{p \times 1}{p (\tfrac{1}{p} - 1)},\\
+    &= \frac{1}{\tfrac{1}{p} - 1}
+\end{aligned}
+$$
 
 # Include R generated graphics
 
