--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -148,7 +148,7 @@ cat(htmltools::includeText("include/rmarkdown-example-chunk-5.Rmd"))
 
 
 # What we'll cover in this workshop
-\frametitle{More or less in this order too}
+\framesubtitle{More or less in this order too}
 
 * How to create an RMarkdown document from scratch, including the basics of the RMarkdown YAML header.
 * How to *knit* rmarkdown documents with R chunks and inline R code.
@@ -158,5 +158,64 @@ cat(htmltools::includeText("include/rmarkdown-example-chunk-5.Rmd"))
 * How to include citations.
 * How to use different document templates, include `papaja`.
 * How to make \LaTeX\ beamer^[These slides are made with RMarkdown rendering to its \LaTeX\ beamer output.] and html based slides.  
+
+
+# What is Git?
+
+* Git is version control software, initially developed for version control of the Linux operating system kernel.
+* It is now extremely widely used for almost all kinds of software development projects. 
+* Git works on a decentralized system whereby a code-base can be *cloned*, developed independently, and possible re-merged. 
+* For collaborating on one project, two developers use a *remote* host, clone it, develop locally, *commit* and then *push* back to and *pull* from the remote host.
+* GitHub is one of the most widely used hosting sites (but there are others, e.g. BitBucket; and running your own git hosting server is simple and inexpensive).
+
+# What should we care?
+
+* Git (and a Git server) provides a means of sharing your research compendium and its updates, and this can be done from the beginning of the research and continually throughout its entire development.
+* But it's not just another "dropbox": It is distributed version control system. 
+  * It allows open, distributed, collaborative development of research and data analysis code, like the open source development model for software generally.
+  * Even for small teams, it provides a means for efficient and organized development of source code, including (and especially) for writing the source code for our articles, slides, etc (remember (what usually happens)[http://phdcomics.com/archive_print.php?comicid=1531]). 
+  * Even for individuals, it allows for efficient and organized development of our source code.
+  * And it is (almost) endlessly fault tolerant. So long as there is one clone somewhere, the entire project and its version history is preserved entirely.
+
+* Git is designed for source code (i.e. text files) management. Data and other "assets" can be attached to (rather than kept within) the repository using `git fat`, `git annex`, `git lfs`, etc.
+
+# Git: Tiny tutorial
+
+- Start by cloning a remote repository:
+```{r, engine = 'bash', eval = FALSE}
+      git clone https://github.com/yihui/knitr.git
+      cd knitr
+      git log # Read all the commit logs
+```
+- Work as normal, i.e. edit files, create new files, delete files. 
+- You now *stage* your changes, e.g.
+```{r, engine = 'bash', eval = FALSE}
+      git add foo.file.1 foo.file.2 # for edits or new files
+      git rm foo.file.3 # for removed files
+```
+- You then *commit* these:
+```{r, engine = 'bash', eval = FALSE}
+      git commit # Editor opens for your log msg
+```
+
+
+# Git: Tiny tutorial (2)
+
+- Pull down any recent changes by others from the remote:
+```{r, engine = 'bash', eval = FALSE}
+      git pull
+      git log # If new changes, read their logs
+```
+- Now, push your own changes to the remote
+```{r, engine = 'bash', eval = FALSE}
+      git push # requires permissions
+```
+
+- Undo changes:
+```{r, engine = 'bash', eval = FALSE}
+      git reset a381f2f # move back "head"
+      git revert a381f2f # applies new change to revert 
+```
+
 
 # References
