Fix broken link

--- a/readme.Rmd
+++ b/readme.Rmd
@@ -15,7 +15,7 @@ This workshop `r will_or_was` in room *Maxima* in the *Engels Meeting and Confer
 
 This workshop will be hands-on and learn-by-doing and we will spend most of the time creating articles and slides using RMarkdown, and working with Git. I have some slides, however.
 
-* [Workshop slides]('slides/slides.pdf')
+* [Workshop slides](slides/slides.pdf)
 
 Anything else that is needed can be obtained by browsing through the GitHub repository or by downloading all of its content as a zip, or better yet, by cloning this repository.
 
