--- a/readme.Rmd
+++ b/readme.Rmd
@@ -13,9 +13,12 @@ if (Sys.Date() <= '2019-07-08') {will_or_was <- 'will be'} else {will_or_was <- 
   
 This workshop `r will_or_was` in room *Maxima* in the *Engels Meeting and Conference Center* [Stationsplein 45, 3013 AK Rotterdam](https://goo.gl/maps/CNkJifuEYnvw2EM1A) from 9:30 to 14:15 (with a break at 11:00-11:30 and 12:15-13:30) on July, 8, 2019.
 
-This workshop will be hands-on and learn-by-doing and we will spend most of the time creating articles and slides using RMarkdown, and working with Git. I have some slides, however.
+This workshop will be hands-on and learn-by-doing and we will spend most of the time creating articles and slides using RMarkdown, and working with Git. I have some slides and notes, however.
 
 * [Workshop slides](slides/slides.pdf)
+* [Introduction to Git](git_intro/git_intro.md)
+
+And the int
 
 Anything else that is needed can be obtained by browsing through the GitHub repository or by downloading all of its content as a zip, or better yet, by cloning this repository.
 
