--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -171,7 +171,7 @@ cat(htmltools::includeText("include/rmarkdown-example-chunk-5.Rmd"))
 # What should we care?
 
 * Git (and a Git server) provides a means of sharing your research compendium and its updates, and this can be done from the beginning of the research and continually throughout its entire development.
-* But it's not just another "dropbox": It is distributed version control system. 
+* But it's not just another "dropbox": It is a decentralized version control system. 
   * It allows open, distributed, collaborative development of research and data analysis code, like the open source development model for software generally.
   * Even for small teams, it provides a means for efficient and organized development of source code, including (and especially) for writing the source code for our articles, slides, etc (no more of this: http://phdcomics.com/comics/archive_print.php?comicid=1531). 
   * Even for individuals, it allows for efficient and organized development.
